// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 700px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c5 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: none;
  text-decoration: underline;
}

.c10:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #651FFF;
}

.c15:active {
  background: #354AA4;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #2C3A73;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c6 {
  display: flex;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin-top: 4px;
  margin-bottom: 4px;
  margin: 0;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 32px;
  margin: 0;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin-bottom: 8px;
  margin: 0;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c7 {
  padding: 8px;
  margin-bottom: 4px;
  width: 300px;
  align-items: center;
  border: 1px solid #222C59;
  border-radius: 8px;
}

.c7.disabled {
  pointer-events: none;
  opacity: 0.5;
}

.c9 {
  font-style: italic;
  overflow: visible;
}

.c11 {
  line-height: normal;
  padding-left: 4px;
}

.c13 {
  font-weight: bold;
  letter-spacing: 4px;
}

.c13:after {
  content: ' ';
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Set Up Access
  </div>
  <div
    class="c2"
  >
    Select the OS users you will use to connect to server.
  </div>
  <div
    class="c3"
  >
    Select OS Users
  </div>
  <div
    class="c4"
  >
    <div
      class="c5 c6 c7"
    >
      <div
        class="c8 c9"
      >
        No OS users added
      </div>
    </div>
    <button
      class="c10 c11"
      kind="text"
    >
      <span
        class="c12 icon icon-add c13"
        color="light"
      />
      Add new OS User
    </button>
  </div>
  <div
    class="c14"
  >
    
    <button
      class="c15"
      disabled=""
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c16"
      href="/web"
      kind="secondary"
      mt="3"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`empty state with static logins 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 700px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c5 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: none;
  text-decoration: underline;
}

.c10:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #651FFF;
}

.c15:active {
  background: #354AA4;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #2C3A73;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c6 {
  display: flex;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin-top: 4px;
  margin-bottom: 4px;
  margin: 0;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 32px;
  margin: 0;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin-bottom: 8px;
  margin: 0;
}

.c7 {
  padding: 8px;
  margin-bottom: 4px;
  width: 300px;
  align-items: center;
  border: 1px solid #222C59;
  border-radius: 8px;
}

.c7.disabled {
  pointer-events: none;
  opacity: 0.5;
}

.c8 {
  margin-right: 10px;
  accent-color: #512FC9;
}

.c8:hover {
  cursor: pointer;
}

.c9 {
  width: 250px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c11 {
  line-height: normal;
  padding-left: 4px;
}

.c13 {
  font-weight: bold;
  letter-spacing: 4px;
}

.c13:after {
  content: ' ';
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Set Up Access
  </div>
  <div
    class="c2"
  >
    Select the OS users you will use to connect to server.
  </div>
  <div
    class="c3"
  >
    Select OS Users
  </div>
  <div
    class="c4"
  >
    <div
      class="c5 c6 c7 disabled"
    >
      <input
        checked=""
        class="c8"
        id="ubunutu0"
        name="ubunutu"
        type="checkbox"
      />
      <label
        class="c9"
        for="ubunutu0"
      >
        ubunutu
      </label>
    </div>
    <div
      class="c5 c6 c7 disabled"
    >
      <input
        checked=""
        class="c8"
        id="debian1"
        name="debian"
        type="checkbox"
      />
      <label
        class="c9"
        for="debian1"
      >
        debian
      </label>
    </div>
    <button
      class="c10 c11"
      kind="text"
    >
      <span
        class="c12 icon icon-add c13"
        color="light"
      />
      Add new OS User
    </button>
  </div>
  <div
    class="c14"
  >
    
    <button
      class="c15"
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c16"
      href="/web"
      kind="secondary"
      mt="3"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`failed 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 700px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c9 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 4px;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: none;
  text-decoration: underline;
}

.c7:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #2C3A73;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c6 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  margin-right: 8px;
  color: #f50057;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin-top: 4px;
  margin-bottom: 4px;
  margin: 0;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 32px;
  margin: 0;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin-bottom: 8px;
  margin: 0;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 0;
}

.c8 {
  color: #03a9f4;
  font-weight: normal;
  padding-left: 0;
  font-size: inherit;
  min-height: auto;
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Set Up Access
  </div>
  <div
    class="c2"
  >
    Select the OS users you will use to connect to server.
  </div>
  <div
    class="c3"
  >
    Select OS Users
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <span
        class="c6 icon icon-warning "
        color="danger"
      />
      Encountered Error: 
      some error message
    </div>
    <button
      class="c7 c8"
      kind="text"
    >
      Refetch OS Users
    </button>
  </div>
  <div
    class="c9"
  >
    
    <button
      class="c10"
      disabled=""
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c11"
      href="/web"
      kind="secondary"
      mt="3"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`loaded with static state 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 700px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c5 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: none;
  text-decoration: underline;
}

.c10:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #651FFF;
}

.c15:active {
  background: #354AA4;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #2C3A73;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c6 {
  display: flex;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  margin-top: 4px;
  margin-bottom: 4px;
  margin: 0;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 32px;
  margin: 0;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin-bottom: 8px;
  margin: 0;
}

.c7 {
  padding: 8px;
  margin-bottom: 4px;
  width: 300px;
  align-items: center;
  border: 1px solid #222C59;
  border-radius: 8px;
}

.c7.disabled {
  pointer-events: none;
  opacity: 0.5;
}

.c8 {
  margin-right: 10px;
  accent-color: #512FC9;
}

.c8:hover {
  cursor: pointer;
}

.c9 {
  width: 250px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c11 {
  line-height: normal;
  padding-left: 4px;
}

.c13 {
  font-weight: bold;
  letter-spacing: 4px;
}

.c13:after {
  content: ' ';
}

<div
  class="c0"
>
  <div
    class="c1"
    font-size="18px"
  >
    Set Up Access
  </div>
  <div
    class="c2"
  >
    Select the OS users you will use to connect to server.
  </div>
  <div
    class="c3"
  >
    Select OS Users
  </div>
  <div
    class="c4"
  >
    <div
      class="c5 c6 c7 disabled"
    >
      <input
        checked=""
        class="c8"
        id="ubunutu0"
        name="ubunutu"
        type="checkbox"
      />
      <label
        class="c9"
        for="ubunutu0"
      >
        ubunutu
      </label>
    </div>
    <div
      class="c5 c6 c7 disabled"
    >
      <input
        checked=""
        class="c8"
        id="debian1"
        name="debian"
        type="checkbox"
      />
      <label
        class="c9"
        for="debian1"
      >
        debian
      </label>
    </div>
    <div
      class="c5 c6 c7"
    >
      <input
        checked=""
        class="c8"
        id="root0"
        name="root"
        type="checkbox"
      />
      <label
        class="c9"
        for="root0"
      >
        root
      </label>
    </div>
    <div
      class="c5 c6 c7"
    >
      <input
        checked=""
        class="c8"
        id="llama1"
        name="llama"
        type="checkbox"
      />
      <label
        class="c9"
        for="llama1"
      >
        llama
      </label>
    </div>
    <div
      class="c5 c6 c7"
    >
      <input
        checked=""
        class="c8"
        id="george_washington_really_long_name_testing2"
        name="george_washington_really_long_name_testing"
        type="checkbox"
      />
      <label
        class="c9"
        for="george_washington_really_long_name_testing2"
      >
        george_washington_really_long_name_testing
      </label>
    </div>
    <button
      class="c10 c11"
      kind="text"
    >
      <span
        class="c12 icon icon-add c13"
        color="light"
      />
      Add new OS User
    </button>
  </div>
  <div
    class="c14"
  >
    
    <button
      class="c15"
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c16"
      href="/web"
      kind="secondary"
      mt="3"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;
